package userPackage;
syntax = "proto3";

message Request {
  string email = 1;
  string password = 2;
  bool returnSecureToken = 3;
}

message Response { 
  string accessToken = 1; 
}